# ggllama

./: Cargo.toml  LICENSE  README.md
ggml-sys/: Cargo.toml  README.md  build.rs
src/: ggml.rs  llama.rs  main.rs  utils.rs
