[package]
edition = "2021"
license = "MIT"
name = "ggllama"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = {version = "4.1.8", features = ["derive"]}
ggml-sys = {path = "ggml-sys"}
log = "0.4.17"
once_cell = "1.17.1"
partial_sort = "0.2.0"
rand = "0.8.5"
serde_json = "1.0.94"
simplelog = "0.12.1"
thiserror = "1.0.39"

[workspace]
members = [".", "ggml-sys"]
